@@ -364,6 +364,7 @@ sub clean_publisher_place {
 		decode_utf8('Karlových Varech') => 'Karlovy Vary',
 		'Liberci' => 'Liberec',
 		decode_utf8('Litoměřicích') => decode_utf8('Litoměřice'),
+		decode_utf8('Náchodě') => decode_utf8('Náchod'),
 		'Nymburce' => 'Nymburk',
 		'Olomouci' => 'Olomouc',
 		decode_utf8('Ostravě') => 'Ostrava',
