@@ -1,6 +1,7 @@
 0.07
  - Add $options_hr return value to clean_date(). Implment circa date.
  - Add Litoměřice to publishing places cleanup.
+ - Add Náchodě to publishing places cleanup.
  - Add Praha? to publishing places cleanup.
  - Add Výst. to series ordinal cleanup.
  - Add Výstava to series ordinal cleanup.
